--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <meta charset=utf-8>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="app.js"></script>
+<svg class="chart"> </svg>
+<script src="board.js"></script>
