ability to stop tracks

--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
 <script src="app.js"></script>
 <svg class="chart"> </svg>
 <script src="board.js"></script>
+
+<p>
+keys 1 to 8 on the keyboard can stop tracks
+</p>
