Allowing Sample switching - press 1-8 and then click the sample you want to swap in  (will conflict with the stop keyboard shortcut, will fix after I merge)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <meta charset=utf-8>
+<link rel="stylesheet" type="text/css" href="style.css">
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="app.js"></script>
 <svg class="chart"> </svg>
 <script src="board.js"></script>
+<div>New Sample: <input type="text"></div>
