Removing some log statements and making key 0 stop all tracks

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <svg class="chart"> </svg>
 <script src="board.js"></script>
 <p>
-keys 1 to 8 on the keyboard can stop tracks
+keys 1 to 8 on the keyboard can stop tracks<br>
+key 0 stops all the tracks
 </p>
 <p>
 Stopping a track or clicking on an "active" track will stage it for replacement (red outline). <br>
