--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <meta charset=utf-8>
+<html>
+<head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="app.js"></script>
 <svg class="chart"> </svg>
 <script src="board.js"></script>
+</head>
+<body>
 <p>
 keys 1 to 8 on the keyboard can stop tracks<br>
 key 0 stops all the tracks
@@ -14,3 +18,6 @@ Stopping a track or clicking on an "active" track will stage it for replacement 
 Clicking on a waiting sample will swap it in.  The new sample will not play until triggered.
 </p>
 
+
+</body>
+</html>
