--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 <script src="board.js"></script>
 </head>
 <body>
-<p>
-keys 1 to 8 on the keyboard can stop tracks<br>
-key 0 stops all the tracks
-</p>
-<p>
-Stopping a track or clicking on an "active" track will stage it for replacement (red outline). <br>
-Clicking on a waiting sample will swap it in.  The new sample will not play until triggered.
-</p>
+<!--<p>-->
+<!--keys 1 to 8 on the keyboard can stop tracks<br>-->
+<!--key 0 stops all the tracks-->
+<!--</p>-->
+<!--<p>-->
+<!--Stopping a track or clicking on an "active" track will stage it for replacement (red outline). <br>-->
+<!--Clicking on a waiting sample will swap it in.  The new sample will not play until triggered.-->
+<!--</p>-->
+
+<div id=preview-wrapper>
+  <canvas id=preview></canvas>
+  <canvas id=selection></canvas>
+</div>
 
 
 </body>
