Making the sample UI fit better

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <!--Clicking on a waiting sample will swap it in.  The new sample will not play until triggered.-->
 <!--</p>-->
 
-<div id=preview-wrapper>
-  <canvas id=preview></canvas>
-  <canvas id=selection></canvas>
+<div id='preview-wrapper'>
+  <canvas id='preview'></canvas>
+  <canvas id='selection'></canvas>
+  <div class='name'></div>
 </div>
 
 <div>
