Cleaning up the Rdio code, making the UI look a little better. Still needs work in terms of swapping samples

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
   <div class='name'></div>
 </div>
 
-<div>
+<div class="rdio">
   <div class="sign-in button hidden">Click to sign-in with Rdio</div>
   <div class="authed hidden">
-    You're totally authenticated<br>
-    Try loading a track: <input type="text" class="track-id" value="t47579393"/><div class="button load-track">LOAD</div>
-
+    <div class="expander"></div><span class="welcome">You're totally authenticated</span><img src="http://rdio0img-a.akamaihd.net/user/press/rdio-logo.png" class="logo">
+    <br>
+    <input type="text" class="track-id" value="Problem"/><div class="button find-track">Find track to sample...</div>
+    <div class="search-result-container"><div class="search-results"></div></div>
   </div>
 </div>
 <script src="rdio.js"></script>
