Now switching out Rdio tracks slightly maybe more correctly. Also trying to detect a user press

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </div>
 
 <div class="rdio">
-  <div class="sign-in button hidden">Click to sign-in with Rdio</div>
+  <div class="sign-in hidden">
+    <div class="button">Click to sign-in with Rdio</div><img src="http://rdio0img-a.akamaihd.net/user/press/rdio-logo.png" class="logo">
+  </div>
   <div class="authed hidden">
     <div class="expander"></div><span class="welcome">You're totally authenticated</span><img src="http://rdio0img-a.akamaihd.net/user/press/rdio-logo.png" class="logo">
     <br>
